--- a/docs/content/configuration/plugin.mdx
+++ b/docs/content/configuration/plugin.mdx
@@ -36,6 +36,17 @@ the `plugin` configuration in your `gatsby-config.js`.  These options are:
 
   (Default: **`true`**.)
 
+* Show sidebar edit link
+
+  ```javascript
+  showSidebarEditLink: true
+  ```
+
+  Whether the main "Edit on GitHub" will be in the sidebar. `editOnGitHub`
+  must also be `true` for this to have any effect.
+
+  (Default: **`true`**.)
+
 * GitHub repository information
 
   ```javascript
