--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -5,4 +5,6 @@ import {HeroLayout} from 'gatsby-theme-doctornpm'
 import {Index} from 'gatsby-theme-doctornpm'
 export default HeroLayout
 
+hey
 <Index depth="1" />
+
