--- a/docs/content/using.mdx
+++ b/docs/content/using.mdx
@@ -34,6 +34,7 @@ plugins: [
       icon: './src/images/favicon.png',
       editOnGitHub: true,
       showContributors: true,
+      showSidebarEditLink: true,
       repo: {
         url: 'https://github.com/npm/doctornpm',
         defaultBranch: 'main',
